# AdventOfCode2023-Haskell

./: CHANGELOG.md  README.md  adventcode2023.cabal
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.4.7/: adventcode2023-0.1.0.0-inplace.conf  package.cache
src/: MyLib.hs
