cabal-version:      2.4
name:               adventcode2023
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             pehcy
maintainer:         cheeyung.peh@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

common shared-properties
    default-language: Haskell2010
    build-depends:
        base == 4.*
    ghc-options:
        -Wall

library
    exposed-modules:  MyLib

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.17.2.0,
                      directory == 1.3.7.*,
                      text == 2.0.2,
                      regex-compat == 0.95.2.1,
    hs-source-dirs:   src
    default-language: Haskell2010

executable adventcode2023
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.0,
        adventcode2023

    hs-source-dirs:   app
    default-language: Haskell2010
